cmake_minimum_required(VERSION 3.21)
project(sem4_algos C)

set(CMAKE_C_STANDARD 23)
set(CMAKE_C_FLAGS "-O0")

add_executable(sem4_algos main.c)
add_executable(insertionsort insertionsort.c)
add_executable(selectionsort selectionsort.c)
add_executable(bubblesort bubblesort.c)
add_executable(radixsort radixsort.c)
add_executable(bucketsort bucketsort.c)
add_executable(countingsort countingsort.c)
add_executable(quicksort quicksort.c)
add_executable(mergesort mergesort.c)
add_executable(k_way_merge k_way_merge.c)
add_executable(stack_reduced_quicksort stack_reduced_quicksort.c)
add_executable(merge_sort_with_insertion_sort merge_sort_with_insertion_sort.c)
add_executable(kth_order_stat kth_order_stat.c)
add_executable(kth_order_stat_avl kth_order_stat_avl.c)
